﻿2007-03-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* docs/Makefile.am, docs/tmw.6: Added man page by Patrick Matthäi.
	* src/resources/image.cpp: Restored alpha layer check, since it should
	be more efficient in software mode when SDL knows an image doesn't use
	the alpha layer.
	* data/graphics/gui/thickborder.png,
	data/graphics/gui/vscroll_grey.png, data/graphics/gui/slider.png,
	data/graphics/gui/vscroll_blue.png, data/graphics/gui/vscroll_red.png,
	data/graphics/gui/deepbox.png,
	data/graphics/sprites/monster-slime-red.png,
	data/graphics/sprites/monster-scorpion-black.png,
	data/graphics/sprites/monster-scorpion.png,
	data/graphics/sprites/monster-slime-rudolph.png,
	data/graphics/sprites/monster-snake.png,
	data/graphics/sprites/monster-slime-santa.png,
	data/graphics/sprites/monster-maggot.png,
	data/graphics/sprites/monster-spider.png,
	data/graphics/sprites/monster-scorpion-red.png,
	data/graphics/sprites/monster-slime-yellow.png,
	data/graphics/sprites/monster-slime-green.png,
	data/graphics/sprites/monster-maggot-giant.png: Replaced pink pixels
	with transparent ones.

2007-03-18  Rogier Polak  <rogier.l.a.polak@gmail.com>

	* src/main.cpp: Added (-v) version to the arguments. (Applied a patch
	by Patrick Matthäi).
	* src/resources/image.cpp: Deleted the "pink code", which added
	transparancy with SDL_SetColorKey.

2007-03-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* icons/tmw.ico, icons/tmw.png, icons/tmw.xpm: Replaced icons with the
	green globe that is also used on the website.

2007-03-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp, src/tmw.rc, data/icons/tmw-icon.png,
	data/icons/tmw-icon.xpm, data/icons/tmw.ico, data/icons/tmw-icon.ico,
	data/icons/Makefile.am, data/icons/tmw.png, data/icons/tmw.xpm,
	data/icons/CMakeLists.txt: Renamed icons to make things easier for
	Debian packaging, and the "-icon" part was superfluous anyway.

2007-03-12  Philipp Sehmisch  <tmw@crushnet.org>
